QIF neuron notebook math

--- a/neuron/QIF_neuron.ipynb
+++ b/neuron/QIF_neuron.ipynb
@@ -6,21 +6,78 @@
    "source": [
     "# Notebook description\n",
     "\n",
-    "This notebook is for implementing and studying the QIF neuron"
+    "This notebook is for developing the quadratic integrate-and-fire (QIF) neuron."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The QIF dynamics\n",
+    "\n",
+    "The QIF neuron dynamics follows\n",
+    "\n",
+    "\\begin{equation*}\n",
+    " \\tau \\dot{x} = -x + \\frac{x^2}{2} + u\n",
+    "\\end{equation*}\n",
+    "\n",
+    "where $x$ is the state of the neuron, $\\tau$ is the membrane time constant, and $u$ is the neuron input. The firing rate is given by\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "f = \\frac{1}{t_{ref}+t_{spk}}\n",
+    "\\end{equation*}\n",
+    "\n",
+    "where $t_{ref}$ is the refractory period and $t_{spk}$ is the interval from the end of the refractory period to when the neuron spikes. A neuron is considered to have spiked when its state reaches $\\infty$. The cool thing about the QIF neuron is that it can reach $\\infty$ in finite time given the appropriate initial condition or input. To find the inter-spike interval, we integrate from the end of the refractory period to the spike time. Assuming the refractory period ended at $t=0$,\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\tau \\frac{dx}{dt} &= -x + \\frac{x^2}{2} + u \\\\\n",
+    "dt &= \\frac{\\tau}{-x + \\frac{x^2}{2} + u}dx \\\\\n",
+    "\\int_0^{t_{spk}}dt &= \\int_0^\\infty\\frac{\\tau}{-x + \\frac{x^2}{2} + u}dx \\\\\n",
+    "t_{spk} &= \\frac{\\tau  \\left(\\pi + 2 \\cot ^{-1}\\left(\\sqrt{2u-1}\\right)\\right)}{\\sqrt{2u-1}} \n",
+    "    & \\mathrm{for}\\;u\\ge0.5 \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "In fact, it is possible to solve the QIF neuron dynamics analytically. The actual solution to the QIF neuron is given by [???]\n",
+    "\n",
+    "This solution shows that the QIF neuron actually resets to $-\\infty$ and begins integrating again\n",
+    "\n",
+    "Unfortunately in software, we can't integrate to $\\infty$. Instead we set a threshold $x_t$ at which point the neuron is declared to have spiked, and when a neuron reaches threshold, we reset the neuron to $0$. In this way, the software QIF neuron spikes just like the LIF neuron. This conscession changes the spike rate of the neuron\n",
+    "\n",
+    "\\begin{align*}\n",
+    "t_{spk} &= \\int_0^{x_t}\\frac{\\tau}{-x + \\frac{x^2}{2} + u}dx \\\\\n",
+    " &= \\frac{2\\tau\\left(\\cot^{-1}\\left(\\frac{\\sqrt{2u-1}}{x_t-1}\\right)+\n",
+    "    \\cot^{-1}\\left(\\sqrt{2u-1}\\right)\\right)}\n",
+    "     {\\sqrt{2u-1}}\n",
+    "     & \\mathrm{for}\\;u\\ge0.5 \\\\\n",
+    "\\end{align*}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## open questions\n",
+    "\n",
+    "How long until a QIF neuron spikes from a nonzero starting voltage with a given input that will cause the neuron to spike? Actually at threshold with no input ($x=2$, $u=0$), the neuron will not spike. But any slight bump up from $x=2$ should make it spike. Can I have it spike at arbitrary time up to $\\infty$?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "from numpy.random import lognormal\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "\n",
+    "import nengo\n",
+    "from nengo.builder import Builder\n",
+    "from nengo.builder.signal import Signal\n",
+    "from nengo.builder.neurons import SimNeurons"
    ]
   },
   {
@@ -31,7 +88,81 @@
    },
    "outputs": [],
    "source": [
-    "class QIF_heun(QIF):\n",
+    "class QIFRate(nengo.neurons.NeuronType):  # Neuron types must subclass `nengo.Neurons`\n",
+    "    \"\"\"A rate-based quadratic integrate-and-fire neuron model\"\"\"   \n",
+    "    tau_rc = NumberParam(low=0, low_open=True)\n",
+    "    tau_ref = NumberParam(low=0)\n",
+    "    probeable = ['rates']\n",
+    "    threshold = 10.0  # Use this as the threshold for saying if a neuron has spiked\n",
+    "\n",
+    "    def __init__(self, tau_rc, tau_ref):\n",
+    "        \"\"\"You should not modify this function\"\"\"\n",
+    "        self.tau = tau_rc    # time constant (can contain mismatch)\n",
+    "        self.tau_ref = tau_ref\n",
+    "        \n",
+    "    def gain_bias(self, max_rates, intercepts):\n",
+    "        \"\"\"Return gain and bias given maximum firing rate and x-intercept.\n",
+    "        \n",
+    "        For our QIF implementation, we rely on the intrinsic variability\n",
+    "        of the transistors to provide the heterogeneity in the tuning curves\n",
+    "        and so set the gain to 1 and bias to 0.\n",
+    "        \n",
+    "        You should not modify this function\n",
+    "        \"\"\"\n",
+    "        gain = np.ones(max_rates.shape)\n",
+    "        bias = np.zeros(max_rates.shape)\n",
+    "        return gain, bias\n",
+    "\n",
+    "    def step_math(self, dt, J, output):\n",
+    "        \"\"\"Compute the output rates in Hz for input current\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        dt : float\n",
+    "            simulation time step. Unused in this function.\n",
+    "        J : N-long 1D array of floats (during simulation)\n",
+    "            input current to N neurons \n",
+    "            or\n",
+    "            (k x N) 2D array of floats (when using the tuning_curves function)\n",
+    "            k input currents to N neurons\n",
+    "        output : N-long, 1D array of floats\n",
+    "            spike rate of neurons\n",
+    "        \"\"\"\n",
+    "        def clip_sqrt(x):\n",
+    "            x[x<0] = 0.\n",
+    "            return np.sqrt(x)\n",
+    "            \n",
+    "        _inp = self.kbg * self.ibg + self.kin * J\n",
+    "        x = 2. * self.km * _inp - 1.\n",
+    "        idx = x > 0.\n",
+    "        num = clip_sqrt(x)\n",
+    "        den = clip_sqrt(x)\n",
+    "        atan_x_num = QIFRate.threshold*self.km - 1 + np.zeros(den.shape)\n",
+    "        den[idx] = np.arctan(atan_x_num[idx]/den[idx]) + np.arctan(1./den[idx])\n",
+    "        den *= 2. * self.tau\n",
+    "        output[idx] = num[idx]/den[idx]\n",
+    "        output[~idx] = 0.\n",
+    "\n",
+    "\n",
+    "# Register the QIFRate model with Nengo\n",
+    "# You should not modify anything below here in this cell\n",
+    "@Builder.register(QIFRate)\n",
+    "def build_qifrate(model ,qifrate, neurons):\n",
+    "    model.add_op(SimNeurons(\n",
+    "        neurons=qifrate,\n",
+    "        J=model.sig[neurons]['in'],\n",
+    "        output=model.sig[neurons]['out']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class QIF(QIF):\n",
     "    \"\"\"A spiking quadratic integrate-and-fire neuron model\"\"\"   \n",
     "    def step_math(self, dt, J, spiked, voltage):\n",
     "        \"\"\"Integrate the QIF model one step forward in time using Heun's method\n",
@@ -183,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
