--- a/neuron/QIF_neuron.ipynb
+++ b/neuron/QIF_neuron.ipynb
@@ -3867,8 +3867,7 @@
     "        refractory_time[spiked > 0] = self.tau_ref + spiketime\n",
     "        \n",
     "\n",
-    "# Register the QIF_heun model with Nengo\n",
-    "# You should not have to modify this\n",
+    "# Register the QIF model with Nengo\n",
     "@Builder.register(QIF)\n",
     "def build_qif(model, qif, neurons):\n",
     "    model.sig[neurons]['voltage'] = Signal(\n",
