update synapse notebooks to for uniform->periodic

--- a/synapse/synapse_SNR_periodic_pthinned.ipynb
+++ b/synapse/synapse_SNR_periodic_pthinned.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook looks at the asymptotic SNR of a synapse with $p$-thinned uniform input spike rate $\\lambda$. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_poisson.ipynb) is a notebook considering a synapse with Poisson input spikes and [here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with uniform input spikes."
+    "This notebook looks at the asymptotic SNR of a synapse with $p$-thinned periodic input spikes arriving with rate $\\lambda$. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_poisson.ipynb) is a notebook considering a synapse with Poisson input spikes and [here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_periodic.ipynb) is a notebook considering a synapse with periodic input spikes."
    ]
   },
   {
@@ -26,7 +26,7 @@
     "The synapse with input spikes is a first order lowpass filter described by\n",
     "$$\\tau\\dot{x}=-x+\\sum_i\\delta(t-t_i)I_i$$\n",
     "\n",
-    "where $x$ is the synapse state, $t_i$ is the arrival time of the $i$th spike, and $I_i$ thins the spikes. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_demo.ipynb) is a notebook demoing a synapse. Spikes are uniform so $t_i=\\frac{i}{\\lambda}$, and $I\\in\\{0,1\\}$ indicates whether we keep the $i$th spike or not.\n",
+    "where $x$ is the synapse state, $t_i$ is the arrival time of the $i$th spike, and $I_i$ thins the spikes. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_demo.ipynb) is a notebook demoing a synapse. Spikes are periodic so $t_i=\\frac{i}{\\lambda}$, and $I\\in\\{0,1\\}$ indicates whether we keep the $i$th spike or not.\n",
     "\n",
     "For a given offset in time within one period, $t_0$, the value of the synapse looking back in time is \n",
     "\n",
@@ -101,7 +101,7 @@
     "E[x] &= \\lambda p.\n",
     "\\end{align*}\n",
     "\n",
-    "To cross-check, consider that when $p=1$, $E[x]=\\lambda$, which is the same $E[x]$ as when the synapse receives unthinned uniform spikes."
+    "To cross-check, consider that when $p=1$, $E[x]=\\lambda$, which is the same $E[x]$ as when the synapse receives unthinned periodic spikes."
    ]
   },
   {
@@ -165,7 +165,7 @@
     "\n",
     "$$E[x^2]=\\frac{\\lambda}{2\\tau}\\coth\\left(\\frac{1}{2\\lambda\\tau}\\right),$$ \n",
     "\n",
-    "which is the same $E[x^2]$ as when the synapse receives unthinned uniform spikes."
+    "which is the same $E[x^2]$ as when the synapse receives unthinned periodic spikes."
    ]
   },
   {
@@ -279,7 +279,7 @@
     "def th_snr(lam, p, tau):\n",
     "    return 1./np.sqrt(1./(2.*lam*p*tau)*(1-p+p*(1+np.exp(-1/(lam*tau)))/(1-np.exp(-1/(lam*tau))))-1)\n",
     "\n",
-    "# theory functions for uniform\n",
+    "# theory functions for periodic (previously called uniform)\n",
     "def th_mean_u(lam):\n",
     "    return lam\n",
     "\n",
@@ -350,8 +350,8 @@
     "    plt.ylabel(r'$E[x]\\tau$', fontsize=20)\n",
     "    plt.subplot(132)\n",
     "    plt.plot(lam*tau, var_x_p*tau**2, 'g', label='Poisson')\n",
-    "    plt.plot(lam*tau, var_x*tau**2, 'b', label='p-thin uniform')\n",
-    "    plt.plot(lam*tau, var_x_u*tau**2, 'r', label='uniform')\n",
+    "    plt.plot(lam*tau, var_x*tau**2, 'b', label='p-thin periodic')\n",
+    "    plt.plot(lam*tau, var_x_u*tau**2, 'r', label='periodic')\n",
     "    plt.legend(loc='upper left')\n",
     "    plt.title(r'$p=%.3f$' % (p), fontsize=20)\n",
     "    plt.xlabel(r'$\\lambda\\tau$ received by synapse', fontsize=20);\n",
@@ -420,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The plots suggest that the SNR of a synapse grows asymptotically linearly with the input rate for uniform spiking input. This is a better scaling than a synapse with Poisson spiking input, in which the SNR grows with the square root of the input rate."
+    "The plots suggest that the SNR of a synapse grows asymptotically linearly with the input rate for periodic spiking input. This is a better scaling than a synapse with Poisson spiking input, in which the SNR grows with the square root of the input rate."
    ]
   },
   {
@@ -594,7 +594,7 @@
     "    plt.subplot(131)\n",
     "    plt.plot(lams*tau, obs_mean*tau, 'b', label='simulation')\n",
     "    plt.plot(lams*tau, mean_th*tau, 'b--', label='theory')\n",
-    "    plt.plot(lams*tau, mean_th_u*tau, 'r--', label='uniform')\n",
+    "    plt.plot(lams*tau, mean_th_u*tau, 'r--', label='periodic')\n",
     "    plt.plot(lams*tau, mean_th_p*tau, 'g--', label='Poisson')\n",
     "    plt.legend(loc='upper left')\n",
     "    plt.ylabel(r'$E[x]\\tau$', fontsize=20)\n",
