--- a/synapse/synapse_SNR_poisson.ipynb
+++ b/synapse/synapse_SNR_poisson.ipynb
@@ -14,7 +14,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook looks at the signal to noise ratio (SNR) of a synapse with Poisson input spike train with frequency $\\lambda$. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with uniform input spikes and [here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_uniform.ipynb) is a notebook considering a synapse with $p$-thinned uniform input spikes\n",
+    "This notebook looks at the signal to noise ratio (SNR) of a synapse with Poisson input spike train with frequency $\\lambda$. [Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_periodic.ipynb) is a notebook considering a synapse with periodic input spikes and [here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/synapse/synapse_SNR_periodic_p_thinned.ipynb) is a notebook considering a synapse with $p$-thinned periodic input spikes\n",
     "\n",
     "$$SNR = \\frac{E[X]}{\\sqrt{\\operatorname{Var}(X)}}$$\n",
     "\n",
