poisson alpha synapse

--- a/synapse/alpha_synapse.ipynb
+++ b/synapse/alpha_synapse.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -302,7 +302,7 @@
        "lhBCCE0ViSWEEEJTRWIJIYTQVJFYQgghNFUklhBCCE31/6eNBdvtxgyGAAAAAElFTkSuQmCC\n"
       ],
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x5b3d950>"
+       "<matplotlib.figure.Figure at 0x311ae50>"
       ]
      },
      "metadata": {},
