fix fourier notebook typo

--- a/theory/fourier.ipynb
+++ b/theory/fourier.ipynb
@@ -111,7 +111,7 @@
     "Now we can take the Fourier transform of the shah function\n",
     "\n",
     "\\begin{align*}\n",
-    "\\hat{\\shah}(s) &= \\int_{-\\infty}^{\\infty}\\sha(t)e^{-2\\pi ist}dt \\\\\n",
+    "\\hat{\\shah}(s) &= \\int_{-\\infty}^{\\infty}\\shah(t)e^{-2\\pi ist}dt \\\\\n",
     " &= \\int_{-\\infty}^{\\infty}\\sum_{n=-\\infty}^{\\infty}e^{2\\pi int}e^{-2\\pi ist}dt \\\\\n",
     " &= \\sum_{n=-\\infty}^{\\infty}\\int_{-\\infty}^{\\infty}e^{2\\pi int}e^{-2\\pi ist}dt \\\\\n",
     " &= \\sum_{n=-\\infty}^{\\infty}\\delta(n-s) \\\\\n",
@@ -171,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
