--- a/experiments/activity_based_delta_learning.ipynb
+++ b/experiments/activity_based_delta_learning.ipynb
@@ -82,7 +82,9 @@
    "source": [
     "# Nengo implementation\n",
     "\n",
-    "We'll implement this learning rule in nengo."
+    "We'll implement this learning rule in nengo.\n",
+    "\n",
+    "![](figures/activity_delta.png =250x100)"
    ]
   },
   {
@@ -156,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.3"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
