--- a/theory/least_squares.ipynb
+++ b/theory/least_squares.ipynb
@@ -169,9 +169,9 @@
     "$$\n",
     "\n",
     "That is, we desire\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\argmin _\\mathbf{x}\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -198,30 +198,30 @@
    "source": [
     "Expanding the norm-squared,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2 &= (\\mathbf{A}\\mathbf{x}-\\mathbf{y})^T(\\mathbf{A}\\mathbf{x}-\\mathbf{y}) \\\\\n",
     " &= (\\mathbf{x}^T\\mathbf{A}^T-\\mathbf{y}^T)(\\mathbf{A}\\mathbf{x}-\\mathbf{y}) \\\\\n",
     " &= \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}-\\mathbf{y}^T\\mathbf{A}\\mathbf{x} \n",
     "    + \\mathbf{y}^T\\mathbf{y} \\\\\n",
     "\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2 &=\n",
     " \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}+\\mathbf{y}^T\\mathbf{y} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "Taking the derivative,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\frac{d}{d\\mathbf{x}}\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2 &= \\frac{d}{d\\mathbf{x}}\\left(\n",
     " \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}+\\mathbf{y}^T\\mathbf{y}\\right) \\\\\n",
     " &= 2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^T\\mathbf{y} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "and setting to $0$,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "0 &= 2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^T\\mathbf{y} \\\\\n",
     "\\mathbf{A}^T\\mathbf{A}\\mathbf{x} &= \\mathbf{A}^T\\mathbf{y} \\\\\n",
     "\\mathbf{x} &= (\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -230,7 +230,7 @@
    "source": [
     "Let's break down the solution,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\mathbf{A}^T\\mathbf{A} &=\n",
     "    \\begin{bmatrix}\n",
     "    - & \\mathbf{a}_0^T & -\\\\\n",
@@ -257,7 +257,7 @@
     "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
     "    \\sum_{i=0}^mA_{n,i}A_{0,i} & \\sum_{i=0}^mA_{n,i}A_{1,i} & \\cdots & \\sum_{i=0}^mA_{n,i}^2\\\\\n",
     "    \\end{bmatrix}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "In the context of NEF, these are the pairwise projections of the tuning curves onto each other."
    ]
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\mathbf{A}^T\\mathbf{y} &= \n",
     "    \\begin{bmatrix}\n",
     "    - & \\mathbf{a}_0^T & -\\\\\n",
@@ -289,7 +289,7 @@
     "    \\vdots \\\\\n",
     "    \\sum_{i=0}^mA_{n,i}y_i \\\\\n",
     "    \\end{bmatrix} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "In the context of NEF, this is the projection of the output onto the tuning curves.\n",
     "\n",
     "[Here](http://nbviewer.ipython.org/github/fragapanagos/notebooks/blob/master/theory/least_squares_error.ipynb) is a discussion of the error in least squares."
@@ -326,7 +326,7 @@
     "\n",
     "and \n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\eta &=\n",
     "    \\begin{bmatrix}\n",
     "    | & | &  & | \\\\\n",
@@ -340,7 +340,7 @@
     "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
     "    \\eta_{m,0} & \\eta_{m,1} & \\cdots & \\eta_{m,n} \\\\\n",
     "    \\end{bmatrix} \\\\\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -360,32 +360,32 @@
    "source": [
     "Expanding the norm-squared,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2 &= (\\mathbf{A}\\mathbf{x}-\\mathbf{y})^T(\\mathbf{A}\\mathbf{x}-\\mathbf{y}) \\\\\n",
     " &= (\\mathbf{x}^T\\mathbf{A}^T-\\mathbf{y}^T)(\\mathbf{A}\\mathbf{x}-\\mathbf{y}) \\\\\n",
     " &= \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}-\\mathbf{y}^T\\mathbf{A}\\mathbf{x} \n",
     "    + \\mathbf{y}^T\\mathbf{y} \\\\\n",
     "\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2 &=\n",
     " \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}+\\mathbf{y}^T\\mathbf{y} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "Taking the derivative and expanding the noise terms,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\frac{d}{d\\mathbf{x}}\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2 &= \\frac{d}{d\\mathbf{x}}\\left(\n",
     " \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}+\\mathbf{y}^T\\mathbf{y}\\right) \\\\\n",
     " &= 2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^T\\mathbf{y} \\\\\n",
     " &= 2(A^T+\\eta^T)(A+\\eta)\\mathbf{x}-2(A^T+\\eta^T)\\mathbf{y} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "and setting the expected value to $0$,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "0 &= E\\left[2(A^T+\\eta^T)(A+\\eta)\\mathbf{x}-2(A^T+\\eta^T)\\mathbf{y}\\right] \\\\\n",
     " &= E\\left[(A^T+\\eta^T)(A+\\eta)\\mathbf{x}-(A^T+\\eta^T)\\mathbf{y}\\right] \\\\\n",
     " &= E\\left[A^TA\\mathbf{x}+A^T\\eta\\mathbf{x}+\\eta^TA\\mathbf{x}+\\eta^T\\eta\\mathbf{x}-A^T\\mathbf{y}-\\eta^T\\mathbf{y}\\right] \\\\\n",
     " &= A^TA\\mathbf{x}+A^TE[\\eta]\\mathbf{x}+E[\\eta]^TA\\mathbf{x}+E[\\eta^T\\eta]\\mathbf{x}-A^T\\mathbf{y}-E[\\eta]^T\\mathbf{y} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "At this point, we will consider the different cases for $E[\\eta]$ and $E[\\eta^T\\eta]$."
    ]
@@ -396,19 +396,19 @@
    "source": [
     "If $E[n]=0$\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "0 &= A^TA\\mathbf{x}+A^TE[\\eta]\\mathbf{x}+E[\\eta]^TA\\mathbf{x}+E[\\eta^T\\eta]\\mathbf{x}-A^T\\mathbf{y}-E[\\eta]^T\\mathbf{y} \\\\ \n",
     " &= A^TA\\mathbf{x}+E[\\eta^T\\eta]\\mathbf{x}-A^T\\mathbf{y} & \\quad \\text{since }E[\\eta]=0\\\\\n",
     " &= A^TA\\mathbf{x}+E[\\eta^T\\eta]\\mathbf{x}-A^T\\mathbf{y} \\\\\n",
     "(A^TA+E[\\eta^T\\eta])\\mathbf{x} &= A^T\\mathbf{y} \\\\\n",
     "\\mathbf{x} &= (A^TA+E[\\eta^T\\eta])^{-1}A^T\\mathbf{y} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "If, in addition, $E[\\eta^T\\eta]=\\sigma^2I$,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\mathbf{x} &= \\left(A^TA+\\sigma^2I\\right)^{-1}A^T\\mathbf{y} \\\\\n",
-    "\\end{align}\n"
+    "\\end{align*}\n"
    ]
   },
   {
@@ -419,7 +419,7 @@
     " - $E[\\eta]=0$ implies that the noise is unbiased, which is only true if _$a_i$ is the mean tuning curves rather than the noiseless tuning curve_.\n",
     " - $E[\\eta^T\\eta]=\\sigma^2I$ implies that the noise is _uncorrelated between neurons across the input space_, which may or may not be true.\n",
     " \n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "E[\\eta^T\\eta] &=\n",
     "    E\\begin{bmatrix}\n",
     "    \\eta_0^T\\eta_0 & \\eta_0^T\\eta_1 & \\cdots & \\eta_0^T\\eta_n\\\\\n",
@@ -434,11 +434,11 @@
     "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
     "    \\sum_{i=0}^mE[\\eta_{n,i}\\eta_{0,i}] & \\sum_{i=0}^mE[\\eta_{n,i}\\eta_{1,i}] & \\cdots & \\sum_{i=0}^mE[\\eta_{n,i}^2]\\\\\n",
     "    \\end{bmatrix}\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "If $\\eta_{i,j}$ is uncorrelated with $\\eta_{k,l}$ for $i\\neq k$ and $j\\neq l$, then the off diagonal terms are 0, so\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "E[\\eta^T\\eta] &=\n",
     "    \\begin{bmatrix}\n",
     "    \\sum_{i=0}^mE[\\eta_{0,i}^2] & 0 & \\cdots & 0 \\\\\n",
@@ -446,7 +446,7 @@
     "    \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
     "    0 & 0 & \\cdots & \\sum_{i=0}^mE[\\eta_{n,i}^2]\\\\\n",
     "    \\end{bmatrix}\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -455,11 +455,11 @@
    "source": [
     "However, in the most general case where $E[\\eta]\\neq0$ and $E[\\eta^T\\eta]\\neq\\sigma^2I$,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "0 &= A^TA\\mathbf{x}+A^TE[\\eta]\\mathbf{x}+E[\\eta]^TA\\mathbf{x}+E[\\eta^T\\eta]\\mathbf{x}-A^T\\mathbf{y}-E[\\eta]^T\\mathbf{y} \\\\\n",
     "\\left(A^TA+A^TE[\\eta]+E[\\eta]^TA+E[\\eta^T\\eta]\\right)\\mathbf{x} &= \\left(A^T+E[\\eta]^T\\right)\\mathbf{y} \\\\\n",
     "\\mathbf{x} &= \\left(A^TA+A^TE[\\eta]+E[\\eta]^TA+E[\\eta^T\\eta]\\right)^{-1}\\left(A^T+E[\\eta]^T\\right)\\mathbf{y} \\\\\n",
-    "\\end{align}"
+    "\\end{align*}"
    ]
   },
   {
@@ -493,29 +493,29 @@
     "\n",
     "Starting with the expanding the norm-squared,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2 &=\n",
     " \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}+\\mathbf{y}^T\\mathbf{y} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "Taking the derivative,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\frac{d}{d\\mathbf{x}}\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2 &= \\frac{d}{d\\mathbf{x}}\\left(\n",
     " \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}+\\mathbf{y}^T\\mathbf{y}\\right) \\\\\n",
     " &= 2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^T\\mathbf{y} \\\\\n",
     " &= 2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^T(y+\\eta) \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "and setting the expected value to $0$,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "0 &= E\\left[2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^T(y+\\eta)\\right] \\\\\n",
     " &= 2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^T(y+E[\\eta]) \\\\\n",
     " &= 2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^Ty \\\\\n",
     "\\mathbf{A}^T\\mathbf{A}\\mathbf{x} &= \\mathbf{A}^Ty \\\\\n",
     "\\mathbf{x} &= (\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^Ty \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "but what if we don't have access to $y$?...How much error do we introduce?"
    ]
@@ -533,7 +533,7 @@
    "source": [
     "Here we will show that the least squares solution via singular value decomposition (SVD) is the same as regularized least squares for constant noise power. By taking the singular value decomposition $A=U\\Sigma V^T$,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\mathbf{x} &= \\left(A^TA+\\sigma^2I\\right)^{-1}A^T\\mathbf{y} \\\\\n",
     " &= \\left(V\\Sigma U^TU\\Sigma V^T+\\sigma^2I\\right)^{-1}V\\Sigma U^T\\mathbf{y} \\\\\n",
     " &= \\left(V\\Sigma^2V^T+\\sigma^2I\\right)^{-1}V\\Sigma U^T\\mathbf{y} \\\\\n",
@@ -542,7 +542,7 @@
     " &= V\\left(\\Sigma^2+\\sigma^2I\\right)^{-1}V^TV\\Sigma U^T\\mathbf{y} \\\\\n",
     " &= V\\left(\\Sigma^2+\\sigma^2I\\right)^{-1}\\Sigma U^T\\mathbf{y} \\\\\n",
     " &= VDU^T\\mathbf{y} & \\text{where } D \\text{ is diagonal and } D_{i,i}=\\frac{\\alpha_i}{\\alpha_i^2+\\sigma^2}\\\\\n",
-    "\\end{align}\n"
+    "\\end{align*}\n"
    ]
   },
   {
@@ -566,11 +566,11 @@
     "\n",
     "and \n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\mathbf{x} &= (\\mathbf{A}^T\\mathbf{A})^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
     " &= (V\\Sigma^2V^T)^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
     " &= V\\Sigma^{-2}V^T\\mathbf{A}^T\\mathbf{y} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "When computing $\\Sigma^{-2}$, we clip the entries of $\\Sigma$ that are within $\\epsilon$ of $0$ and only invert the resulting nonzero entries.\n",
     "\n",
@@ -592,13 +592,13 @@
    "source": [
     "Here we will derive the least squares solution using SVD.\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\mathbf{A}\\mathbf{x} &= \\mathbf{y} \\\\\n",
     "U\\Sigma V^T\\mathbf{x} &= \\mathbf{y} \\\\\n",
     "\\Sigma V^T\\mathbf{x} &= U^T\\mathbf{y} \\\\\n",
     "V^T\\mathbf{x} &= \\Sigma^{-1}U^T\\mathbf{y} \\\\\n",
     "\\mathbf{x} &= V\\Sigma^{-1}U^T\\mathbf{y} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "Open questions and issues:\n",
     " - Show the relation between this method and regularized least squares."
@@ -625,26 +625,26 @@
     "\n",
     "Expanding the objective function,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2+\\|\\mathbf{\\Gamma}\\mathbf{x}\\|_2^2 &=\n",
     "  \\mathbf{x}^T\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{x}^T\\mathbf{A}^T\\mathbf{y}+\\mathbf{y}^T\\mathbf{y}+\n",
     "  \\mathbf{x}^T\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}\\mathbf{x} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "Taking the derivative,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "\\frac{d}{d\\mathbf{x}}\\left(\\|\\mathbf{A}\\mathbf{x}-\\mathbf{y}\\|_2^2+\\|\\mathbf{\\Gamma}\\mathbf{x}\\|_2^2\\right) &=\n",
     "   2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^T\\mathbf{y}+2\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}\\mathbf{x} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "Setting the derivative equal to 0,\n",
     "\n",
-    "\\begin{align}\n",
+    "\\begin{align*}\n",
     "0 &= 2\\mathbf{A}^T\\mathbf{A}\\mathbf{x}-2\\mathbf{A}^T\\mathbf{y}+2\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}\\mathbf{x} \\\\\n",
     "\\left(\\mathbf{A}^T\\mathbf{A}+\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}\\right)\\mathbf{x} &= \\mathbf{A}^T\\mathbf{y} \\\\\n",
     "\\mathbf{x} &= \\left(\\mathbf{A}^T\\mathbf{A}+\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}\\right)^{-1}\\mathbf{A}^T\\mathbf{y} \\\\\n",
-    "\\end{align}\n",
+    "\\end{align*}\n",
     "\n",
     "This solution is the same as the regularized least squares formulation with $E[\\eta]=0$, $\\mathbf{A}=A$, and $\\mathbf{\\Gamma}^T\\mathbf{\\Gamma}=E[\\eta^T\\eta]$.\n",
     "\n",
@@ -670,7 +670,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
