add time constant to synapse distribution notebook

--- a/synapse/Synapse Distribution with Poisson Process Input.ipynb
+++ b/synapse/Synapse Distribution with Poisson Process Input.ipynb
@@ -153,22 +153,22 @@
     "\n",
     "Let\n",
     "\n",
-    "$$X_i(T)=e^{-(T-t_i)}$$\n",
+    "$$X_i(T)=\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}$$\n",
     "\n",
     "\n",
     "where $t_i$ is uniformly distributed between 0 and $T$.\n",
     "\n",
     "\\begin{align*}\n",
     "M_X(t) &= E\\left[e^{tX}\\right] \\\\\n",
-    " &= E\\left[e^{te^{-(T-t_i)}}\\right]\n",
+    " &= E\\left[e^{t\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}}\\right]\n",
     "\\end{align*}\n",
     "\n",
-    "The integrals to compute $E\\left[e^{te^{-(T-t_i)}}\\right]$ are ugly, and unecessary as we'll see, so we'll leave them in their current form. Moving on to take the derivative,\n",
+    "Computing $E\\left[e^{t\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}}\\right]$ directly is difficult (because of the nested exponentials) and, as we'll see, unecessary, so we'll leave it in its current form. Moving on to take the derivative,\n",
     "\n",
     "\\begin{align*}\n",
     "\\frac{d}{dt}M_X(t) &= \\frac{d}{dt}E\\left[e^{tX}\\right] \\\\\n",
-    " &= E\\left[\\frac{d}{dt}e^{te^{-(T-t_i)}}\\right] \\\\\n",
-    " &= E\\left[e^{-(T-t_i)}e^{te^{-(T-t_i)}}\\right] \\\\\n",
+    " &= E\\left[\\frac{d}{dt}e^{t\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}}\\right] \\\\\n",
+    " &= E\\left[\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}e^{t\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}}\\right] \\\\\n",
     "\\end{align*}\n"
    ]
   },
@@ -178,15 +178,18 @@
    "source": [
     "# $G_N(z)$\n",
     "\n",
-    "Now let's say $N$ comes from a Poisson process with rate $\\lambda$ over a time period $T$, so that $N$ follows a Poisson distribution.\n",
+    "$N$ comes from a Poisson process with rate $\\lambda$ over a time period $T$, so that $N$ follows a Poisson distribution with parameter $\\lambda T$.\n",
     "\n",
     "$$P\\{N=n\\} = \\frac{(\\lambda T)^ne^{-\\lambda T}}{n!}$$\n",
     "\n",
     "and\n",
     "\n",
     "\\begin{align*}\n",
-    "G_N(z) &= E[N^z] \\\\\n",
-    "&= e^{\\lambda T(z-1)} \\\\\n",
+    "G_N(z) &= E[z^N] \\\\\n",
+    "&= \\sum_{n=0}^{\\infty}z^n\\frac{(\\lambda T)^ne^{-\\lambda T}}{n!} \\\\\n",
+    "&= e^{-\\lambda T}\\sum_{n=0}^{\\infty}\\frac{(z\\lambda T)^n}{n!} \\\\\n",
+    "&= e^{-\\lambda T}e^{z\\lambda T} \\\\\n",
+    "G_N(z) &= e^{\\lambda T(z-1)} \\\\\n",
     "\\end{align*}\n",
     "\n",
     "so\n",
@@ -204,32 +207,33 @@
     "\n",
     "\\begin{align*}\n",
     "E[S] &= \\left[\\left(\\frac{d}{dz}G_N\\right)(M_X(t))\\frac{d}{dt}M_X(t)\\right]_{t=0} \\\\\n",
-    "&= \\left[\\lambda Te^{\\lambda T\\left(E\\left[e^{te^{-(T-t_i)}}\\right]-1\\right)}\n",
-    "   E\\left[e^{-(T-t_i)}e^{te^{-(T-t_i)}}\\right]\\right]_{t=0} \\\\\n",
+    "&= \\left[\\lambda Te^{\\lambda T\\left(E\\left[e^{t\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}}\\right]-1\\right)}\n",
+    "   E\\left[\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}e^{t\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}}\\right]\\right]_{t=0} \\\\\n",
     "&= \\lambda Te^{\\lambda T\\left(E\\left[e^{0}\\right]-1\\right)}\n",
-    "   E\\left[e^{-(T-t_i)}e^{0}\\right] \\\\\n",
-    "&= \\lambda TE\\left[e^{-(T-t_i)}\\right] \\\\\n",
+    "   E\\left[\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}e^{0}\\right] & \\textrm{Note how setting }t=0 \\textrm{ cleans things up} \\\\\n",
+    "&= \\lambda TE\\left[\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}\\right] \\\\\n",
     "\\end{align*}\n",
     "\n",
     "now\n",
     "\n",
     "\\begin{align*}\n",
-    "E\\left[e^{-(T-t_i)}\\right] &= E\\left[e^{-T}e^{t_i)}\\right] \\\\\n",
-    "&= e^{-T}E\\left[e^{t_i)}\\right] \\\\\n",
-    "&= e^{-T}\\int_0^Te^{t_i}\\frac{1}{T}dt_i \\\\\n",
-    "&= \\frac{e^{-T}}{T}\\int_0^Te^{t_i}dt_i \\\\\n",
-    "&= \\frac{e^{-T}}{T}\\left[e^{t_i}\\right]_0^T \\\\\n",
-    "&= \\frac{e^{-T}}{T}\\left(e^{T}-1\\right) \\\\\n",
-    "&= \\frac{1}{T}\\left(1-e^{-T}\\right) \\\\\n",
+    "E\\left[\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}\\right] &= \\frac{e^{-T/\\tau}}{\\tau}E\\left[e^{t_i/\\tau}\\right] \\\\\n",
+    "&= \\frac{e^{-T/\\tau}}{\\tau}\\int_0^Te^{t_i/\\tau}\\frac{1}{T}dt_i \\\\\n",
+    "&= \\frac{e^{-T/\\tau}}{T\\tau}\\int_0^Te^{t_i/\\tau}dt_i \\\\\n",
+    "&= \\frac{e^{-T/\\tau}}{T\\tau}\\left[\\tau e^{t_i/\\tau}\\right]_0^T \\\\\n",
+    "&= \\frac{e^{-T/\\tau}}{T}\\left(e^{T/\\tau}-1\\right) \\\\\n",
+    "E\\left[\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}\\right] &= \\frac{1}{T}\\left(1-e^{-T/\\tau}\\right) \\\\\n",
     "\\end{align*}\n",
     "\n",
     "so\n",
     "\n",
     "\\begin{align*}\n",
-    "E[S] &= \\lambda TE\\left[e^{-(T-t_i)}\\right] \\\\\n",
-    "&= \\lambda T\\frac{1}{T}\\left(1-e^{-T}\\right) \\\\\n",
-    "&= \\lambda \\left(1-e^{-T}\\right) \\\\\n",
-    "\\end{align*}\n"
+    "E[S] &= \\lambda TE\\left[\\frac{1}{\\tau}e^{-(T-t_i)/\\tau}\\right] \\\\\n",
+    "&= \\lambda T\\frac{1}{T}\\left(1-e^{-T/\\tau}\\right) \\\\\n",
+    "&= \\lambda \\left(1-e^{-T/\\tau}\\right) \\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "The mean value of the synapse converges exponentially to the input spike rate with time constant $\\tau$"
    ]
   }
  ],
