--- a/synapse/Synapse Distribution with Poisson Process Input.ipynb
+++ b/synapse/Synapse Distribution with Poisson Process Input.ipynb
@@ -238,6 +238,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -253,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
